Setup 1 section content

--- a/index.html
+++ b/index.html
@@ -12,13 +12,32 @@
   <script src='scripts/index.js' defer></script>
 </head>
 <body>
+  <!-- Section 1 | Hero Section -->
   <section id="hero-section">
-    <img src='assets/hero-section/left-img.png' alt='left-img' class='left-img'>
+    <!-- Bg images -->
+    <img src='assets/hero-section/left-img.webp' alt='left-img' class='left-img'>
 
     <div class="right-bg-images">
-      <img src='assets/hero-section/right-img.png' alt='right-img'>
-      <img src='assets/hero-section/right-bottom-img.png' alt='right-bottom-img'>
+      <img src='assets/hero-section/right-img.webp' alt='right-img'>
+      <img src='assets/hero-section/right-bottom-img.webp' alt='right-bottom-img'>
+    </div>
+
+    <!-- Content -->
+    <div class="content d-flex flex-column items-center gap-5">
+      <img src='assets/hero-section/logo.webp' alt='logo' class="logo">
+
+      <div class="font-size-40 font-weight-500 c-blue mb-2">
+        Діє за <span class="c-red">2 хвилини</span></br>
+        та протягом <span class="c-red">12 годин*</span>
+      </div>
+
+      <button class="button button-blue">
+        Дізнатись більше
+      </button>
     </div>
   </section>
+
+  <!-- Section 2 | Features Section -->
+  <section></section>
 </body>
 </html>
