--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontmen Test</title>
 
 
-  <link rel='stylesheet' href='styles/palette.css'>
-  <link rel='stylesheet' href='styles/reusable.css'>
-  <link rel='stylesheet' href='styles/styles.css'>
-  <script src='scripts/index.js' defer></script>
+  <link rel="stylesheet" href="styles/palette.css">
+  <link rel="stylesheet" href="styles/reusable.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
 </head>
 <body>
   <!-- Section 1 | Hero Section -->
   <section id="hero-section">
     <!-- Bg images -->
-    <img src='assets/hero-section/left-img.webp' alt='left-img' class='left-img'>
+    <img src="assets/hero-section/left-img.webp" alt="left-img" class="left-img">
 
     <div class="right-bg-images">
-      <img src='assets/hero-section/right-img.webp' alt='right-img'>
-      <img src='assets/hero-section/right-bottom-img.webp' alt='right-bottom-img'>
+      <img src="assets/hero-section/right-img.webp" alt="right-img">
+      <img src="assets/hero-section/right-bottom-img.webp" alt="right-bottom-img">
     </div>
 
     <!-- Content -->
-    <div class="content d-flex flex-column items-center gap-5">
-      <img src='assets/hero-section/logo.webp' alt='logo' class="logo">
+    <div class="content d-flex flex-column items-center gap-3">
+      <img src="assets/hero-section/logo.webp" alt="logo" class="logo">
 
       <div class="font-size-40 font-weight-500 c-blue mb-2">
         Діє за <span class="c-red">2 хвилини</span></br>
