Fit second section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
   </section>
 
   <!-- Section 2 | Features Section -->
-  <section></section>
+  <section
+    id="section-2"
+    class="c-blue">
+    <h2 class="font-size-40 text-center ph-4 mv-1">
+      При нежитю, який викликаний алергією на:
+    </h2>
+
+    <div class="content">
+      <figure class="flex-1">
+        <img src="assets/section-2/img-1.webp" alt="feature-1">
+        <figcaption>Пилок рослин, лугові трави</figcaption>
+      </figure>
+
+      <figure class="flex-1">
+        <img src="assets/section-2/img-2.webp" alt="feature-2">
+        <figcaption>Цвітіння дерев</figcaption>
+      </figure>
+
+      <figure class="flex-1">
+        <img src="assets/section-2/img-3.webp" alt="feature-3">
+        <figcaption>Домашній пил</figcaption>
+      </figure>
+
+      <figure class="flex-1">
+        <img src="assets/section-2/img-4.webp" alt="feature-4">
+        <figcaption>Домашніх тварин</figcaption>
+      </figure>
+    </div>
+  </section>
 </body>
 </html>
