Fit third section

--- a/index.html
+++ b/index.html
@@ -67,5 +67,31 @@
       </figure>
     </div>
   </section>
+
+  <!-- Section 3 | How it works Section -->
+  <section id="section-3">
+    <div class="content">
+      <h2 class="c-blue font-size-40 mb-2">
+        Чим відрізняється</br>
+        <span class="c-red">застуда від алергії?</span>
+      </h2>
+
+      <p class="font-weight-500 mb-2">
+        Симптоми алергії та застуди дійсно схожі. Втім, тут важливу роль відіграє час.
+        Зазвичай прояви застуди не довготривалі і, як правило, вони проходять через 10-14 днів.
+        Натомість симптоми алергії можуть тривати і два, і три, і чотири тижні.
+      </p>
+
+      <p class="font-weight-500 mb-3">
+        Більше того,
+        важливим показником для діагностування алергії є температура. При вірусних або бактеріальних захворюваннях,
+        зазвичай, вона піднімається вище за 37.5 градусів, натомість при алергії її показники рідко піднімаються вище 37°C
+      </p>
+
+      <button class="button button-red mb-2">
+        Обрати продукт
+      </button>
+    </div>
+  </section>
 </body>
 </html>
